--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean-dist": "rimraf 'packages/hooks/{lib,es,node_modules,dist}'",
     "clean": "pnpm run clean-dist && rimraf 'node_modules'",
     "dev": "dumi dev",
-    "build": "pnpm -r --filter=./packages/hooks run build",
+    "build": "pnpm -r --filter=./packages/* run build",
     "build:doc": "dumi build",
     "test": "jest",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
@@ -71,7 +71,7 @@
     "surge": "^0.21.3",
     "tslib": "^2.4.1",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.1.3",
+    "typescript": "^4.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
