add a readme  subpackage

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "pub": "pnpm run build && pnpm -r --filter=./packages/* publish",
-    "pub:bate": "pnpm run build && pnpm -r --filter=./packages/* publish --tag beta",
+    "pub:beta": "pnpm run build && pnpm -r --filter=./packages/* publish --tag beta",
     "encode-fe-lint-scan": "encode-fe-lint scan",
     "encode-fe-lint-fix": "encode-fe-lint fix"
 
